Fixed text layout issue

--- a/src/styles/components/_paper.scss
+++ b/src/styles/components/_paper.scss
@@ -37,7 +37,7 @@
   padding-top: 0.5rem;
   margin: 0.7rem 0.5rem 0 6.5rem;
   font-size: 1.8rem;
-  line-height: 0.98;
+  line-height: 0.95;
 
   &-mtop {
     margin-top: 1rem;
